--- a/VTT1721050533/Views/Lecture/Create.cshtml
+++ b/VTT1721050533/Views/Lecture/Create.cshtml
@@ -3,9 +3,9 @@ using System.Collections.Generic;
 using System.Linq;
 using System.Web;
 
-namespace VTT1721050533.Content
+namespace VTT1721050533.Views.Lecture
 {
-    public class QL
-    {
-    }
+	public class Create
+	{
+	}
 }
