--- a/VTT1721050533/Views/Shared/_Layout.cshtml
+++ b/VTT1721050533/Views/Shared/_Layout.cshtml
@@ -21,8 +21,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Person", "Index", "persons")</li>
+                    <li>@Html.ActionLink("Student", "Index", "students")</li>
+                    <li>@Html.ActionLink("Lecture", "Index", "lectures")</li>
                 </ul>
             </div>
         </div>
